<resources>
    <string name="app_name">ImageShooter</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="descr_image">Image</string>

    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>

    <string name="menu_item_sort_by_popular">Popular</string>
    <string name="menu_item_sort_by_recent">Recent</string>
    <string name="menu_item_sort_by_viewed">Most viewed</string>
    <string name="menu_item_sort_by_commented">Most commented</string>
</resources>
