<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
      <item
              android:id="@+id/item_clear_memory_cache"
              app:showAsAction="never"
              android:title="@string/menu_item_clear_memory_cache"/>
      <item
              android:id="@+id/item_clear_disc_cache"
              app:showAsAction="never"
              android:title="@string/menu_item_clear_disc_cache"/>

    <item
            android:id="@+id/item_sort_by_recent"
            app:showAsAction="never"
            android:checkable="true"
            android:title="@string/menu_item_sort_by_recent"/>
    <item
            android:id="@+id/item_sort_by_popular"
            app:showAsAction="never"
            android:checkable="true"
            android:title="@string/menu_item_sort_by_popular"/>
    <item
            android:id="@+id/item_sort_by_viewed"
            app:showAsAction="never"
            android:checkable="true"
            android:title="@string/menu_item_sort_by_viewed"/>
    <item
            android:id="@+id/item_sort_by_commented"
            app:showAsAction="never"
            android:checkable="true"
            android:title="@string/menu_item_sort_by_commented"/>
</menu>
